# docker-vhpc

./: .gitignore
rocky10/: CONFIGURATION.md  HOWTO.md  INTER.md  INTRO.md  Justfile  NAMING.md  README.md  commands  stepbystep.md  stepstorun
rocky10/ansible/: ansible.cfg  inventory.ini  pyproject.toml
rocky10/docker/: gen-config.sh
rocky10/docker/compute/: supervisord.conf
rocky10/docker/storage/: Dockerfile  ganesha.conf  storage-init.sh  supervisord.conf
rocky9/: CONFIGURATION.md  HOWTO.md  Justfile  NAMING.md  README.md  commands  stepbystep.md  stepstorun
rocky9/ansible/: README.md  containers.docker.yml  playbook.yml
rocky9/docker/: docker-compose.yml.template
rocky9/docker/compute/: start-compute.sh
rocky9/docker/storage/: Dockerfile  storage-init.sh
